# trip_planner_backend

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/controller/: error_messages.rs  event_controller.rs  mod.rs  trip_controller.rs
src/model/: cost.rs  credentials.rs  currency.rs  event.rs  event_type.rs  geo_location.rs  mod.rs  trip.rs  user.rs
src/presenter/: cost_presenter.rs  currency_presenter.rs  event_presenter.rs  event_type_presenter.rs  geo_location_presenter.rs  mod.rs  trip_presenter.rs  user_presenter.rs
src/route/: authentication_routes.rs  event_routes.rs  mod.rs  trip_routes.rs
src/service/: event_service.rs  mod.rs  trip_service.rs  user_service.rs
src/service/authentication/: authentication_service.rs  claims.rs  mod.rs
